# packages/trueforge-sdk/src/serialization/types/index.ts
@@ -54,6 +54,7 @@ export * from "./DeleteMcpServerResponse.js";
 export * from "./DeleteModelProviderResponse.js";
 export * from "./DeleteScheduleResponse.js";
 export * from "./DeleteSkillResponse.js";
+export * from "./DiscoveredModel.js";
 export * from "./DynamicSubAgentsConfig.js";
 export * from "./ExtendedChunkDeltaToolCall.js";
 export * from "./FileContent.js";
@@ -89,6 +90,7 @@ export * from "./ListAgentsResponse.js";
 export * from "./ListAvailableMcpServersResponse.js";
 export * from "./ListAvailableModelsResponse.js";
 export * from "./ListAvailableSkillsResponse.js";
+export * from "./ListDiscoveredModelsResponse.js";
 export * from "./ListMcpServersResponse.js";
 export * from "./ListMcpServerToolsResponse.js";
 export * from "./ListModelProvidersResponse.js";
