# python/trueforge_sdk/src/trueforge_sdk/types/list_discovered_models_response.py
@@ -1,0 +1,20 @@
+# This file was auto-generated by Fern from our API Definition.
+
+import typing
+
+import pydantic
+from ..core.pydantic_utilities import IS_PYDANTIC_V2
+from ..core.unchecked_base_model import UncheckedBaseModel
+from .discovered_model import DiscoveredModel
+
+
+class ListDiscoveredModelsResponse(UncheckedBaseModel):
+    data: typing.List[DiscoveredModel]
+
+    if IS_PYDANTIC_V2:
+        model_config: typing.ClassVar[pydantic.ConfigDict] = pydantic.ConfigDict(extra="allow")  # type: ignore # Pydantic v2
+    else:
+
+        class Config:
+            smart_union = True
+            extra = pydantic.Extra.allow
